kubernetes/open-webui/oauth2-proxy.yml
# References
# https://oauth2-proxy.github.io/oauth2-proxy/configuration/providers/keycloak_oidc/
# https://kubernetes.github.io/ingress-nginx/examples/auth/oauth-external-auth

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: oauth2-proxy
  template:
    metadata:
      labels:
        k8s-app: oauth2-proxy
    spec:
      containers:
        - args:
          - --provider=keycloak-oidc
          - --oidc-issuer-url=https://login.nathanrahm.com/auth/realms/Ollama
          - --email-domain=*
          - --skip-jwt-bearer-tokens=true
          - --client-id=ollama
          - --client-secret=<client-secret>
          - --redirect-url=https://ollama.nathanrahm.com/oauth2/callback
          - --allowed-role=ollama
          - --allowed-role=ollama:ollama
          - --cookie-secret=SD1tfyzMZ5hql0mE
          - --upstream=file:///dev/null
          - --http-address=0.0.0.0:4180
          image: quay.io/oauth2-proxy/oauth2-proxy:latest
          imagePullPolicy: Always
          name: oauth2-proxy

---

apiVersion: v1
kind: Service
metadata:
  labels:
    k8s-app: oauth2-proxy
  name: oauth2-proxy
spec:
  type: ClusterIP
  selector:
    k8s-app: oauth2-proxy
  ports:
    - name: http
      port: 4180

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: oauth2-proxy
  annotations:
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/enable-modsecurity: "true"
    nginx.ingress.kubernetes.io/enable-owasp-core-rules: "true"
    nginx.ingress.kubernetes.io/modsecurity-transaction-id: "$request_id"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "16k"
spec:
  rules:
    - host: ollama.nathanrahm.com
      http:
        paths:
          - path: /oauth2
            pathType: Prefix
            backend:
              service:
                name: oauth2-proxy
                port:
                  name: http
  tls:
    - hosts:
        - ollama.nathanrahm.com
      secretName: ollama-tls
